<resources>
    <string name="app_name">Pringles Parse</string>
    <string name="log_in">Log In</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="Create">create</string>
    <string name="Refresh">refresh</string>
    <string name="enter_a_description">enter a description</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_up_password">password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
