<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/username_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="171dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="84dp"
        tools:layout_editor_absoluteY="52dp" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="148dp" />

    <Button
        android:id="@+id/login_btn"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="170dp"
        android:text="@string/log_in" />

    <ImageView
        android:id="@+id/instagramLogo"
        android:layout_width="195dp"
        android:layout_height="108dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        app:srcCompat="@mipmap/nav_logo_whiteout" />

    <Button
        android:id="@+id/signup_btn"
        android:layout_width="297dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="115dp"
        android:text="@string/sign_up" />

</RelativeLayout>